--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "boxicons": "^2.1.4",
         "moment": "^2.29.4",
         "vue-axios": "^3.5.2",
+        "vue3-uuid": "^1.0.0",
         "vuex": "^4.1.0"
     }
 }
