--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@vuepic/vue-datepicker": "^5.4.0",
         "boxicons": "^2.1.4",
         "moment": "^2.29.4",
         "vue-axios": "^3.5.2",
